Android: Attach hidden layer for CopyFromCompositingSurface()

When the RenderWidgetHostView becomes invisible we might tear down
the layer, which removes the impl layer from the impl layer,
which will cause the Surface not to be added as a dependant Surface
of the root Surface.

Make sure readbacks actually complete (as long as the display is
drawing) by attaching a hidden layer for the readback Surface.

BUG=636628
TBR=dtrainor@chromium.org

Review-Url: https://codereview.chromium.org/2243663002
Cr-Commit-Position: refs/heads/master@{#411502}

Former-commit-id: 02d8a97db2cf9fdca8042ce72416db6b5fc2abbc